--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bl": "~0.5.0",
     "shoe": "~0.0.15",
     "through": "~2.3.4",
-    "become": "~1.1.0"
+    "become": "~1.1.0",
+    "node-thrust": "^0.1.4"
   },
   "bin": {
     "morkdown": "./bin/morkdown.js"
